--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -2,7 +2,12 @@ apiVersion: v1
 kind: Service
 metadata:
   name: argocdapplication
+  namespace: argocdapplication  # Namespace added here
 spec:
   type: NodePort
   ports:
     - port: 80
+      targetPort: 80  # Ensure targetPort is set (optional based on your setup)
+      nodePort: 30080  # Optional: specify a NodePort if you want to control the port
+  selector:
+    app: deploy-nginx  # Ensure this matches the label of your Deployment
