--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: argocdapplication
-  namespace: argocdapplication  # Namespace added here
+  name: nginx-service
+  namespace: argocd  # Namespace added here
 spec:
   type: NodePort
   ports:
