--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -1,8 +1,8 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: argocdapplication
-  namespace: argocdapplication  # Namespace added here
+  name: nginx-deployment
+  namespace: argocd  # Namespace added here
   labels:
     app: nginx
 spec:
