--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: nginx-service
-  namespace: argocd  # Namespace added here
+  namespace: default  # Namespace added here
 spec:
   type: NodePort
   ports:
